--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,21 +4,39 @@ version = "0.0.1"
 description = "Tools for solving common chemical engineering problems"
 authors = ["Jon Wilkey <jon.wilkey@gmail.com>"]
 license = "MIT License"
+packages = [
+    { include = "chem_eng_solver", from = "src" }
+]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = ">=3.7,<3.10"
 scipy = "^1.7.1"
-numpy = "^1.21.2"
+numpy = "^1.21.3"
 unyt = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^3.9.2"
-pytest = "^6.2.4"
-pytest-cov = "^2.12.1"
+black = "^21.10b0"
+flake8 = "^4.0.1"
+pytest = "^6.2.5"
+pytest-cov = "^3.0.0"
 mypy = "^0.910"
-black = "^21.7b0"
-ipython = "^7.26.0"
+ipython = "^7.29.0"
+flake8-docstrings = "^1.6.0"
+isort = "^5.10.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
+[tool.mypy]
+ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = "--cov=chem_eng_solver --cov-report term-missing"
+testpaths = [
+    "tests",
+]
