--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ mypy = "^0.910"
 ipython = "^7.29.0"
 flake8-docstrings = "^1.6.0"
 isort = "^5.10.0"
+Sphinx = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
